<resources>
    <string name="email_support" translatable="false">mailto:FeedbackByters@yandex.com</string>
    <string name="app_name">BCPhotoAnimations</string>
    <string name="project_new">new project</string>
    <string name="save">Save</string>
    <string name="error_title_empty">empty project title</string>
    <string name="remove">remove</string>
    <string name="button_frames_select_cancel">select cancel</string>
    <string name="button_frames_select_range">select range</string>
    <string name="button_frames_copy">copy</string>
    <string name="button_frames_move">move</string>
    <string name="button_frames_revert">revert</string>
    <string name="button_frames_remove">remove</string>
    <string name="dialog_from">from</string>
    <string name="dialog_to">to</string>
    <string name="dialog_range_title">Select frames range</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_position_title">Select position</string>
    <string name="label_fps" formatted="false">%sfps</string>
    <string name="export_images">Export as images</string>
    <string name="export_project_format" formatted="false">export project %s</string>
    <string name="export_project_error">error project export</string>
    <string name="export_project_success_format" formatted="false">project %s export success to folder: %s</string>
    <string name="action_open_folder">Open folder</string>
    <string name="notification_project_export_title_format">export project %s</string>
    <string name="notification_project_export_title_progress_format">project %s. Copy frame %d</string>
    <string name="notification_project_export_channel_name">Photo Animation</string>
    <string name="notification_project_export_channel_description">Photo animation app notifications</string>
    <string name="export_project_success_success">Project export complete. Saved to %s</string>
    <string name="export_attempts_remaining" formatted="false">Free export attempts %d</string>
    <string name="export_attempts_not_enough">Tap to purchase</string>
    <string name="about_title">Created by Byters</string>
    <string name="about_feedback">Write us some words</string>
    <string name="about_message">Want to support or send feedback?</string>
    <string name="email_app_error_no_found">No email app found</string>
    <string name="email_support_title">Photo animation support</string>
    <string name="email_support_message">Hi!</string>
    <string name="project_create_hint">Tap on + to create new animation</string>
    <string name="button_review">Send feeback</string>
    <string name="message_project_title_edit">Input project title</string>
    <string name="hint_frame_add">Tap on + to capture frame</string>
    <string name="notification_project_export_title_progress_format_with_state">project %s. frame %d %s copy</string>
    <string name="export_frame_state_success">success</string>
    <string name="export_frame_state_error">error</string>
    <string name="export_frame_message_error">error</string>
    <string name="export_video_jcodec">Export video (JCodec)</string>
    <string name="next">continue</string>
    <string name="hint_fps">frames per second</string>
    <string name="hint_width">width</string>
    <string name="hint_height">height</string>
    <string name="error_export_mjpeg_meta">all values must be more than 0</string>
    <string name="default_frame_height" translatable="false">720</string>
    <string name="default_frame_width" translatable="false">1280</string>
    <string name="default_fps" translatable="false">5</string>
    <string name="export_video_mp4">Export video (MediaCodec)</string>
    <string name="error_export_video_os_version">Available only for android 4.4+</string>
    <string name="format_message_preview" formatted="false">preview: %dx%d, frame: %dx%d</string>
    <string name="button_discord" translatable="false">Discord</string>
    <string name="notification_video_open_title_format" formatted="false">Open video %s</string>
    <string name="hint_project_title">Input here</string>
    <string name="title_project_remove_format" formatted="false">To remove project input %s</string>
</resources>
