<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etFPS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fps"
            android:inputType="number"
            android:text="@string/default_fps"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_width"
            android:inputType="number"
            android:text="@string/default_frame_width"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_height"
            android:inputType="number"
            android:text="@string/default_frame_height"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/save"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />

</LinearLayout>