<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white_transparent"
    tools:showIn="@layout/fragment_frames">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSelectCancel"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_close_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_select_cancel"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvSelectRange"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_apps_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_select_range"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvRemove"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_delete_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_remove"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvCopy"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_content_copy_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_copy"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvMove"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_open_with_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_move"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvRevert"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:drawableTop="@drawable/ic_swap_horiz_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/button_frames_revert"
                android:textSize="10sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>