<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/project_create_hint"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        app:layoutManager="android.support.v7.widget.GridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/view_item_project" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_review"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />

        <TextView
        android:id="@+id/tvDiscord"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/button_discord"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ivAbout"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:src="@drawable/ic_help_outline_white_24dp" />

</LinearLayout>